# andatests

./: .gitignore  README.md  Tests Oposición.dc.html  banco.js  seed_reference.py
backend/: .env.example  auth.py  config.py  database.py  knowledge.py  llm.py  main.py  models.py  pyproject.toml  render.yaml  requirements.txt  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 839629e4d06a_initial_schema.py
backend/routers/: asistente.py  auth.py  notas.py  ranking.py  sesiones.py  stats.py  temas.py
banco/: tema1.json  tema10.json  tema11.json  tema12.json  tema13.json  tema14.json  tema15.json  tema16.json  tema17.json  tema2.json  tema3.json  tema4.json  tema5.json  tema6.json  tema7.json  tema8.json  tema9.json
informes/: tema12_comparacion_manual_vs_generado.json  tema12_manual_backup.json  validacion_tema1.md  validacion_tema12.md  validacion_tema13.md  validacion_tema15.md  validacion_tema16.md  validacion_tema17.md  validacion_tema2.md  validacion_tema3.md  validacion_tema4.md  validacion_tema5.md  validacion_tema6.md  validacion_tema7.md  validacion_tema8.md  validacion_tema9.md
tests_especiales/tema1/: test116.json  test53.json  test70.json  test94.json
tests_especiales/tema10/: test110.json  test56.json  test59.json  test95.json
tests_especiales/tema11/: test114.json  test62.json  test98.json
tests_especiales/tema12/: test102.json  test115.json  test63.json  test66.json
tests_especiales/tema13/: test121.json  test122.json
tests_especiales/tema14/: test111.json  test123.json  test126.json  test72.json
(+53 files in other folders)
