[project]
name = "andatest-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.21",
    "alembic>=1.13",
    "pydantic-settings>=2.3",
    "aiofiles>=23.0",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "psycopg2-binary>=2.9",
    "email-validator>=2.0",
]

[tool.uv]
package = false
